Application conf addition

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 config_mapping = {
   kafka_config = {
-    file = "properties/kafkaconfig_private.propertes"
+    file = "properties/kafkaconfig_private.properties"
   }
   database_config = {
     file = "properties/dbconfig_private.properties"
